--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Contact Me</title>
   <style>
     body {
@@ -14,9 +14,22 @@
       color: #0073e6;
       text-decoration: none;
     }
+    .visitor-badge {
+      margin-top: 30px;
+    }
   </style>
 </head>
 <body>
-  <h2>Hi, email me at <a href="mailto:tahmidahmedansary@proton.me">tahmidahmedansary@proton.me</a>.</h2>
+  <h2>
+    Hi! Email me at
+    <a href="mailto:tahmidahmedansary@proton.me">tahmidahmedansary@proton.me</a>.
+  </h2>
+
+  <div class="visitor-badge">
+    <img
+      src="https://visitor-badge.glitch.me/badge?page_id=tahmidahmedansary.tahmidahmedansary"
+      alt="Visitor Count"
+    />
+  </div>
 </body>
 </html>
